Fixing stretch

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -32,14 +32,16 @@ i.fa-spinner {
 }
 
 .container {
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
+
 }
 
 .content {
-    text-align: center;
-    display: inline-block;
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .title {
@@ -67,7 +69,11 @@ area {
     z-index: 1;
     width: 100%;
     height: 50px;
-    background-color: #00a087;
+}
+
+.background {
+    width: 100%;
+    background-color: #cc4d29;
 }
 
 .img-top-bar {
